container/deploy.yaml

apiVersion: v1
kind: Service
metadata:
  name: hawk-test-svc
  namespace: hawk
spec:
  type: ClusterIP
  selector:
    app: hawk-apiserver
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hawk
  labels:
    app: hawk-apiserver
  name: hawk-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hawk-apiserver
  strategy: {}
  template:
    metadata:
      labels:
        app: hawk-apiserver
    spec:
      containers:
      - image: immnan/hawk-apiserver:0.1.2
        name: hawk-apiserver
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: secret-volume
          mountPath: /etc/hawk-apiserver/
          readOnly: true
      volumes:
      - name: secret-volume
        secret: 
          secretName: hawk-api-secret
